day7/apps/frontend/manifests/scmfe/scmfe-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: scmfe-deploy 
  labels:
    application: scmcontacts
    service: scmfe
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmcontacts
      service: scmfe
  template:
    metadata:
      labels:
        application: scmcontacts
        service: scmfe
    spec:
      automountServiceAccountToken: false
      containers:
        - name: application
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          image: azuredevcollege.azurecr.io/adcday7/scmfe
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: "/usr/share/nginx/html/settings"
            name: uisettings
            readOnly: true
      volumes:
      - name: uisettings
        secret:
          secretName: uisettings
